hack/k8s/envoy-deploy.yml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: evolution-envoy
  name: evolution-envoy
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: evolution-envoy
  template:
    metadata:
      labels:
        k8s-app: evolution-envoy
    spec:
      containers:
      - name: envoy
        image: stoneagle/develop:envoy
        ports:
        - containerPort: 80
        volumeMounts:
        - name: envoy-config-volume
          mountPath: /etc/evolution-envoy.yaml
          subPath: evolution-envoy.yaml
      volumes:
      - name: envoy-config-volume
        configMap:
          name: evolution-envoy-config
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
