hack/k8s/envoy-svc.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: evolution-envoy
  name: evolution-envoy
  namespace: default 
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: evolution-envoy
