hack/k8s/frontend-deploy.yml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: evolution-frontend
  name: evolution-frontend
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: evolution-frontend
  template:
    metadata:
      labels:
        k8s-app: evolution-frontend
    spec:
      containers:
      - name: frontend 
        image: stoneagle/evolution-frontend:v0.0.1-alpha1
        ports:
        - containerPort: 80
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
