hack/k8s/frontend-svc.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: evolution-frontend
  name: evolution-frontend
  namespace: default 
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: evolution-frontend
