hack/k8s/system-svc.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: evolution-system
  name: evolution-system
  namespace: default 
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    k8s-app: evolution-system
