hack/k8s/time-svc.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: evolution-time
  name: evolution-time
  namespace: default 
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    k8s-app: evolution-time
